<resources>
    <string name="app_name">Monuments</string>
    <string name="welcome_to_my_travel_history">Welcome to My Travel History</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot Your Password?</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="about">About My Travel History</string>
    <string name="info_description">My Travel History is application for tracking and menagging persons travel history, as well as users friends. You can track your progress, collect stars and share your travel experience!</string>
    <string name="info_monument_text">- Represents monument on the map</string>
    <string name="info_location_text">- Marks Your current location</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="send">Send</string>

    <string name="set_profile_picture">Set profile picture</string>
    <string name="my_travel_points">My travel points:</string>
    <string name="my_travel_history">My Travel history:</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>


</resources>